--- a/style.css
+++ b/style.css
@@ -1,4 +1,42 @@
-h1 {
- text-aling: center;
+header {
+ text-align: center;   
+}
 
+ main img {
+width: 150px;
+height: 150px;
+border: 5px solid black;    
+}
+
+main p {
+font-size:18px ;
+font-family: 18px;    
+}
+
+h1 {
+ color: red;   
+}
+
+footer p {
+font-size: 21px; 
+font-family: 21px;
+color: red; 
+text-align: center;
+background-color: black;
+text-decoration: none;
+margin: 10px;
+padding: 10px;
+border-radius: 13px;
+}
+
+
+a {
+font-size: 20px;
+color: brown;
+
+}
+
+footer img {
+width: 60px;
+height: 60px;
 }
